fix collapse state and rotate caret

--- a/assets/scss/_profile.scss
+++ b/assets/scss/_profile.scss
@@ -307,7 +307,7 @@ a.grouplist:hover {
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       content: "\f105";
-      transform: rotate(90deg) ;
+      transform: rotate(270deg) ;
       transition: all linear 0.25s;
       float: right;
       }   
